# simplify_downloader

./: .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  __init__.py  __main__.py  alembic.ini  config.py  crypto.py  docker-compose.yml  pyproject.toml  simplify_downloader.py
alembic/: env.py  script.py.mako
app/: __init__.py  __main__.py  config.py  simplify_downloader.py
common/: audit.py  cleanup.py  dashboard_store.py  date_utils.py  db.py
crm_downloader/: config.py
dashboard_downloader/: .env.example  cli.py  config.py  dashboard_scraper.py  db_health.py  db_tables.py  first_login.py  json_logger.py  manual_single_session_test.py  notifications.py  page_selectors.py  pipeline.py  report_generator.py  run_downloads.py  run_downloads_worked14112025.py  run_store_reports.py  run_summary.py  settings.py  utils.py
docs/: AGENTS.md  CODEX_DEV_PROCESS.md  CODEX_KICKOFF_SIMPLIFY_DOWNLOADER.md  CRM-Downloader-Specs.md  MARKDOWN_REVIEW_ABSURDITIES.md  REFACTOR_PLAN.md  StepA-Response.md  StepC-Documentation.md  architecture.md  backfill_legacy_sales.sql  bank_sync_raw_requirements.txt  configuration.md  crm-sync-pipeline copy.md  crm-sync-pipeline.md  crm-sync-todo.md  customer_retention_pipeline_srs_v1.md  daily_store_performance_report_kpi_spec.md  decision-log.md  etl_email_standardization_brief_for_codex.md  feature-map.md  gst-report-dom-step-by-step.txt  leads_assignment_checklist.md  leads_assignments_pipeline.md  monthly_store_report_spec.md  net_amount_gross_amount_refactor_to_order_amount.md  orders_sync_run_profiler_requirement.md  payment_collections.csv  payment_collections.md  payment_collections_insert.sql  pr-checklist.md  reporting.md  start.md  storepanel.ucleanlaundry.com.har  tag-github.md  td_leads_sync_illustration.docx  td_orders_sync_run.txt  tsv_bank_payment_sync_requirement.md  tsv_crm_refactor_master_plan.md  uc_archive_orders_api_route.txt  uc_orders_sync_runbook.md  (+3 more)
downloader/: .env.example  config.py  first_login.py  json_logger.py  page_selectors.py  run_downloads.py  utils.py
scripts/: Payments.xlsx  Sales-Cash-Receipts.xlsx  cron.env  (+67 more)
(+725 files in other folders)
