[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "simplify-downloader"
version = "0.1.0"
description = "Headless Playwright downloader for TumbleDry MIS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.55.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "alembic>=1.12.0",
    "python-magic>=0.4.27",
    "jinja2>=3.1.4",
]

# Turn off packaging (we’re using Poetry for env + deps + scripts)
[tool.poetry]
package-mode = false
