[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "crm-backend"
version = "0.1.0"
description = "Headless Playwright downloader for Dashboard MIS"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "playwright>=1.55.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.5.0",
    "alembic>=1.12.0",
    "python-magic>=0.4.27",
    "jinja2>=3.1.4",
    "reportlab>=4.0.0",
    "pdfplumber (>=0.11.8,<0.12.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "openpyxl>=3.1.5",
    "python-dateutil>=2.9.0",
    "python-docx (>=1.2.0,<2.0.0)",
]

# Turn off packaging (we’re using Poetry for env + deps + scripts)
[tool.poetry]
package-mode = false
packages = [
    {include = "app"},
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
